# Graph_Transformer_Networks

./: model.py  no_gtn.py  pyproject.toml
