[tool.poetry]
name = "graph_transformer_networks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.1"
torch-geometric = "^2.0.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
